add readme.md, fix api